--- a/notebooks/plot-whole-genome.ipynb
+++ b/notebooks/plot-whole-genome.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,8 @@
     "from rich import print\n",
     "from tqdm import tqdm\n",
     "\n",
-    "EXP_DIR = Path(\"/local/scratch/carlyn.1/dna/training_output/deepnet_8_4_all/\")\n",
-    "DNA_ROOT_DIR = Path(\"/local/scratch/carlyn.1/dna/processed/genome/\")\n",
+    "EXP_DIR = Path(\"/local/scratch/carlyn.1/dna/training_output/pca_10/\")\n",
+    "DNA_ROOT_DIR = Path(\"/local/scratch/carlyn.1/dna/processed/genotypes/genome/\")\n",
     "OUTPUT_DIR = Path(\"/home/carlyn.1/dna-trait-analysis/tmp/edit_plots\")\n",
     "OUTPUT_DIR.mkdir(exist_ok=True)\n",
     "EDIT_OPTIONS = [\"AA\", \"Aa/aA\", \"aa\", \"zero-out\"]\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,58 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">25379316</span><span style=\"font-weight: bold\">)</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m(\u001b[0m\u001b[1;36m1\u001b[0m, \u001b[1;36m25379316\u001b[0m\u001b[1m)\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">25379316</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">25379316</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">25379316</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;36m25379316\u001b[0m \u001b[1;36m25379316\u001b[0m \u001b[1;36m25379316\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;36m0\u001b[0m \u001b[1;36m1\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'tolist'",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'camids'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 141\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fig, data_to_save\n\u001b[1;32m    140\u001b[0m species, wing, color \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merato\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mforewings\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolor_1\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 141\u001b[0m fig, data_to_save \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_plot\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    142\u001b[0m \u001b[43m    \u001b[49m\u001b[43mspecies\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mspecies\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwing\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwing\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcolor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphase\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n\u001b[1;32m    143\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m    144\u001b[0m pio\u001b[38;5;241m.\u001b[39mwrite_image(fig, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtmp.svg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    145\u001b[0m fig\u001b[38;5;241m.\u001b[39mshow()\n",
-      "Cell \u001b[0;32mIn[5], line 39\u001b[0m, in \u001b[0;36mcreate_plot\u001b[0;34m(species, wing, color, phase)\u001b[0m\n\u001b[1;32m     35\u001b[0m     chromosome_position_metadata\u001b[38;5;241m.\u001b[39mappend(position_metadata[nom_pos])\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28mprint\u001b[39m(all_nominal_positions[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m], all_nominal_positions[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m     38\u001b[0m data_to_save \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m---> 39\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwindow_size\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mall_nominal_positions\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtolist\u001b[49m(),\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnominal_positions\u001b[39m\u001b[38;5;124m\"\u001b[39m: all_nominal_positions[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreal_position_metadata\u001b[39m\u001b[38;5;124m\"\u001b[39m: chromosome_position_metadata\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mattributions\u001b[39m\u001b[38;5;124m\"\u001b[39m: {},\n\u001b[1;32m     43\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrmses\u001b[39m\u001b[38;5;124m\"\u001b[39m: {},\n\u001b[1;32m     44\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpearsonr\u001b[39m\u001b[38;5;124m\"\u001b[39m: {},\n\u001b[1;32m     45\u001b[0m }\n\u001b[1;32m     46\u001b[0m phase_idx \u001b[38;5;241m=\u001b[39m PHASE_NAMES\u001b[38;5;241m.\u001b[39mindex(phase)\n\u001b[1;32m     47\u001b[0m phase_data \u001b[38;5;241m=\u001b[39m all_phase_data[phase_idx]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'tolist'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 143\u001b[0m\n\u001b[1;32m    140\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fig, data_to_save\n\u001b[1;32m    142\u001b[0m species, wing, color \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merato\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mforewings\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolor_1\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 143\u001b[0m fig, data_to_save \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_plot\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    144\u001b[0m \u001b[43m    \u001b[49m\u001b[43mspecies\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mspecies\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwing\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwing\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcolor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphase\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n\u001b[1;32m    145\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m    146\u001b[0m pio\u001b[38;5;241m.\u001b[39mwrite_image(fig, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtmp.svg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    147\u001b[0m fig\u001b[38;5;241m.\u001b[39mshow()\n",
+      "Cell \u001b[0;32mIn[9], line 20\u001b[0m, in \u001b[0;36mcreate_plot\u001b[0;34m(species, wing, color, phase)\u001b[0m\n\u001b[1;32m     18\u001b[0m phase_rmses \u001b[38;5;241m=\u001b[39m [[], [], []]\n\u001b[1;32m     19\u001b[0m chromosome_position_metadata \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 20\u001b[0m all_phase_data, position_metadata \u001b[38;5;241m=\u001b[39m \u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEXP_DIR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mspecies\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwing\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(all_phase_data[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     25\u001b[0m all_nominal_positions \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(all_phase_data[i][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]))) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m3\u001b[39m)]\n",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(exp_dir, species, wing, color)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload_data\u001b[39m(exp_dir, species, wing, color):\n\u001b[0;32m----> 5\u001b[0m     position_metadata \u001b[38;5;241m=\u001b[39m \u001b[43mcollect_chromosome_position_metadata\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m        \u001b[49m\u001b[43mDNA_ROOT_DIR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mspecies\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchromosome\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mall\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     data_dir \u001b[38;5;241m=\u001b[39m exp_dir \u001b[38;5;241m/\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspecies\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwing\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolor\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_chromosome_all\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      9\u001b[0m     all_data \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[0;32m~/dna-trait-analysis/src/gtp/tools/timing.py:10\u001b[0m, in \u001b[0;36mprofile_exe_time.<locals>.outer.<locals>.inner\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21minner\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m      9\u001b[0m     st \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[0;32m---> 10\u001b[0m     rv \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     et \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[1;32m     12\u001b[0m     out_str \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m, time\u001b[38;5;241m.\u001b[39mgmtime(et \u001b[38;5;241m-\u001b[39m st))\n",
+      "File \u001b[0;32m~/dna-trait-analysis/src/gtp/dataloading/tools.py:153\u001b[0m, in \u001b[0;36mcollect_chromosome_position_metadata\u001b[0;34m(root, species, chromosome)\u001b[0m\n\u001b[1;32m    151\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex_level\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m columns[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]:\n\u001b[1;32m    152\u001b[0m         columns \u001b[38;5;241m=\u001b[39m columns[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m--> 153\u001b[0m     positions \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m columns]\n\u001b[1;32m    154\u001b[0m scaffold_name \u001b[38;5;241m=\u001b[39m scaffold_dir\u001b[38;5;241m.\u001b[39msplit(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39msep)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    155\u001b[0m position_metadata\u001b[38;5;241m.\u001b[39mextend([[scaffold_name, x] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m positions])\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'camids'"
      ]
     }
    ],
@@ -160,6 +124,8 @@
     "        \"rmses\": {},\n",
     "        \"pearsonr\": {},\n",
     "    }\n",
+    "    print(data_to_save['window_size'])\n",
+    "    \n",
     "    phase_idx = PHASE_NAMES.index(phase)\n",
     "    phase_data = all_phase_data[phase_idx]\n",
     "    attrs, rmse, pearsonr = phase_data\n",
